[gd_scene load_steps=10 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://temp_level_art.png" type="Texture" id=2]
[ext_resource path="res://white_square.png" type="Texture" id=3]
[ext_resource path="res://EnemyController.gd" type="Script" id=4]
[ext_resource path="res://NavMap.gd" type="Script" id=5]
[ext_resource path="res://NavPoint.gd" type="Script" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Animation" id=2]
resource_name = "daynight"
length = 300.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("WorldEnvironment:environment:adjustment_saturation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 40, 70, 120, 125, 140, 145, 190, 220, 265, 270, 290, 295 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.6, 0.6, 0.4, 0.4, 0.6, 0.6, 1.0, 1.0, 1.6, 1.6, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WorldEnvironment:environment:adjustment_contrast")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 40, 70, 120, 125, 140, 145, 190, 220, 265, 270, 290, 295 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2, 1.2, 1.6, 1.6, 1.2, 1.2, 1.0, 1.0, 1.1, 1.1, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WorldEnvironment:environment:adjustment_brightness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 120, 125, 140, 145, 265, 270, 290, 295 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.5, 1.5, 1.0, 1.0, 1.2, 1.2, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasModulate:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 40, 70, 190, 220, 265, 270, 290, 295 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.941176, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 0.941176, 1 ), Color( 1, 1, 0.941176, 1 ), Color( 1, 1, 0.792157, 1 ), Color( 1, 1, 0.792157, 1 ), Color( 1, 1, 0.941176, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Light2D:color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 40, 70, 120, 125, 140, 145, 190, 220 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.6, 0.6, 1.0, 1.0, 0.6, 0.6, 0.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 40, 70, 125, 140, 190, 220, 270, 290 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "dusk" ],
"method": "time_event"
}, {
"args": [ "night" ],
"method": "time_event"
}, {
"args": [ "midnight_start" ],
"method": "time_event"
}, {
"args": [ "midnight_end" ],
"method": "time_event"
}, {
"args": [ "morning" ],
"method": "time_event"
}, {
"args": [ "day" ],
"method": "time_event"
}, {
"args": [ "midday_start" ],
"method": "time_event"
}, {
"args": [ "midday_end" ],
"method": "time_event"
} ]
}

[sub_resource type="Environment" id=3]
background_mode = 4
adjustment_enabled = true

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemyController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="icon" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 273.656, 111.23 )
texture = ExtResource( 2 )

[node name="Entities" type="YSort" parent="."]

[node name="Players" type="YSort" parent="Entities"]

[node name="Enemies" type="YSort" parent="Entities"]

[node name="Projectiles" type="YSort" parent="Entities"]

[node name="Smoothed" type="YSort" parent="Entities"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/daynight = SubResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 1, 1, 0.941176, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Light2D" type="Light2D" parent="CanvasLayer"]
position = Vector2( 438, 448 )
texture = ExtResource( 3 )
color = Color( 0.784314, 0.588235, 0, 0 )
mode = 1

[node name="EnemySpawn" type="Position2D" parent="."]
position = Vector2( 464.577, 84.2573 )

[node name="NavMap" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Position2D2" type="Position2D" parent="NavMap"]
position = Vector2( 189.316, 104.235 )
script = ExtResource( 6 )
connections = [ "Position2D3", "Position2D13" ]

[node name="Position2D3" type="Position2D" parent="NavMap"]
position = Vector2( 187.98, 144.771 )
script = ExtResource( 6 )
connections = [ "Position2D2", "Position2D13" ]

[node name="Position2D12" type="Position2D" parent="NavMap"]
script = ExtResource( 6 )

[node name="Position2D13" type="Position2D" parent="NavMap"]
position = Vector2( 242.694, 99.587 )
script = ExtResource( 6 )
connections = [ "Position2D2", "Position2D14", "Position2D3" ]

[node name="Position2D14" type="Position2D" parent="NavMap"]
position = Vector2( 296.593, 94.2416 )
script = ExtResource( 6 )
connections = [ "Position2D13", "Position2D16", "Position2D15" ]

[node name="Position2D15" type="Position2D" parent="NavMap"]
position = Vector2( 331.338, 104.932 )
script = ExtResource( 6 )
connections = [ "Position2D16", "Position2D14" ]

[node name="Position2D16" type="Position2D" parent="NavMap"]
position = Vector2( 334.457, 70.1873 )
script = ExtResource( 6 )
connections = [ "Position2D14", "Position2D15" ]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 466.628, 164.147 )

[node name="Line2D" type="Line2D" parent="."]
default_color = Color( 1, 0, 0, 1 )
