[gd_scene load_steps=8 format=2]

[ext_resource path="res://map/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://misc/white_square.png" type="Texture" id=2]
[ext_resource path="res://gui/GameGUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/EnemyManager.gd" type="Script" id=5]
[ext_resource path="res://main/Level.gd" type="Script" id=6]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
adjustment_enabled = true

[sub_resource type="Animation" id=2]
length = 300.0
loop = true
step = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("WorldEnvironment:environment:adjustment_saturation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 40, 70, 115, 120, 140, 145, 190, 220, 265, 270, 290, 295 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.6, 0.6, 0.4, 0.4, 0.6, 0.6, 1.0, 1.0, 1.3, 1.3, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WorldEnvironment:environment:adjustment_contrast")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 40, 70, 115, 120, 140, 145, 190, 220, 265, 270, 290, 295 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2, 1.2, 1.3, 1.3, 1.2, 1.2, 1.0, 1.0, 1.0, 1.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WorldEnvironment:environment:adjustment_brightness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 40, 70, 115, 120, 140, 145, 190, 220, 265, 270, 290, 295 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2, 1.2, 1.5, 1.5, 1.2, 1.2, 1.0, 1.0, 1.2, 1.2, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasModulate:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 40, 70, 190, 220, 265, 270, 290, 295 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.941176, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 0.941176, 1 ), Color( 1, 1, 0.941176, 1 ), Color( 1, 1, 0.862745, 1 ), Color( 1, 1, 0.862745, 1 ), Color( 1, 1, 0.941176, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LightFilter/Light2D:color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 40, 70, 115, 120, 140, 145, 190, 220 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.6, 0.6, 1.0, 1.0, 0.6, 0.6, 0.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 40, 70, 120, 140, 190, 220, 270, 290 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "dusk" ],
"method": "time_event"
}, {
"args": [ "night" ],
"method": "time_event"
}, {
"args": [ "midnight" ],
"method": "time_event"
}, {
"args": [ "latenight" ],
"method": "time_event"
}, {
"args": [ "dawn" ],
"method": "time_event"
}, {
"args": [ "day" ],
"method": "time_event"
}, {
"args": [ "midday" ],
"method": "time_event"
}, {
"args": [ "afternoon" ],
"method": "time_event"
} ]
}

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2( 463, 287.5 )

[node name="StartCam" type="Camera2D" parent="PlayerSpawn"]
current = true

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="DayNightCycle" type="Node2D" parent="."]

[node name="LightFilter" type="CanvasLayer" parent="DayNightCycle"]
layer = 0

[node name="Light2D" type="Light2D" parent="DayNightCycle/LightFilter"]
position = Vector2( 432, 448 )
texture = ExtResource( 2 )
color = Color( 0.784314, 0.588235, 0, 0 )
mode = 1

[node name="CanvasModulate" type="CanvasModulate" parent="DayNightCycle"]
color = Color( 1, 1, 0.941176, 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="DayNightCycle"]
environment = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DayNightCycle"]
anims/daynight = SubResource( 2 )

[node name="GameTick" type="Timer" parent="."]

[node name="HealTick" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ExhaustionTick" type="Timer" parent="."]
wait_time = 15.0

[node name="FirewallTick" type="Timer" parent="."]
wait_time = 10.0

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="SpawnTimer" type="Timer" parent="EnemyManager"]

[node name="GUI" parent="." instance=ExtResource( 3 )]

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="GameTick" to="." method="game_tick"]
[connection signal="timeout" from="HealTick" to="." method="_on_HealTick_timeout"]
[connection signal="timeout" from="ExhaustionTick" to="." method="_on_ExhaustionTick_timeout"]
[connection signal="timeout" from="FirewallTick" to="." method="_on_FirewallTick_timeout"]
[connection signal="timeout" from="EnemyManager/SpawnTimer" to="EnemyManager" method="_on_SpawnTimer_timeout"]
